--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,21 @@
     <properties>
         <cxf.version>2.7.0</cxf.version>
         <spring.version>3.0.6.RELEASE</spring.version>
+        <moskito.version>2.1.3</moskito.version>
     </properties>
+    
+    <repositories>
+        <repository>
+            <id>provided</id>
+            <url>http://nexus.anotheria.net/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
     
     <dependencies>
         <dependency>
@@ -41,11 +55,48 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>    
-         <!--dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>1.7</version>
+        <!--dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.2.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.java-persistence</groupId>
+            <artifactId>jpa-api</artifactId>
+            <version>2.0.Beta-20090815</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.1.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>(1.3.160,1.4)</version>
         </dependency-->
+        
+        <dependency>
+            <groupId>net.anotheria</groupId>
+            <artifactId>moskito-core</artifactId>
+            <version>${moskito.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.anotheria</groupId>
+            <artifactId>moskito-web</artifactId>
+            <version>${moskito.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.anotheria</groupId>
+            <artifactId>moskito-webui</artifactId>
+            <version>${moskito.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.anotheria</groupId>
+            <artifactId>moskito-aop</artifactId>
+            <version>${moskito.version}</version>
+        </dependency>
+            
     </dependencies>
     <build>
         <pluginManagement>
@@ -189,6 +240,63 @@
                     </additionalparam>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <configuration>
+                    <artifactItems>
+                        <artifactItem>
+                            <groupId>net.anotheria</groupId>
+                            <artifactId>moskito-webui</artifactId>
+                            <version>${moskito.version}</version>
+                            <type>jar</type>
+                            <overWrite>true</overWrite>
+                            <outputDirectory>${project.build.directory}/tmp</outputDirectory>
+                            <includes>img/*,js/*.js,**/*.jsp,css/*.css</includes>
+                        </artifactItem>
+                    </artifactItems>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <directory>${project.build.directory}/tmp</directory>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+            <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>aspectj-maven-plugin</artifactId>
+            <version>1.4</version>
+            <configuration>
+                <aspectLibraries>
+                    <aspectLibrary>
+                        <groupId>net.anotheria</groupId>
+                        <artifactId>moskito-aop</artifactId>
+                    </aspectLibrary>
+                </aspectLibraries>
+                <source>1.6</source>
+                <target>1.6</target>
+            </configuration>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
         </plugins>
     </build>
 </project>
