--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <version>${cxf.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.3</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.10</version>
@@ -272,6 +277,9 @@
                         <resource>
                             <directory>${project.build.directory}/tmp</directory>
                         </resource>
+                        <resource>
+                            <directory>${project.build.directory}/generated-resources/schemagen</directory>
+                        </resource>
                     </webResources>
                 </configuration>
             </plugin>
@@ -347,7 +355,28 @@
                         <include>**/representation/*.java</include>
                     </includes>
                 </configuration>
-          </plugin>
+            </plugin>
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>xsd-copy</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>{project.build.directory}/generated-resources/schemagen</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
