--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,13 +25,18 @@
         </servlet-class>
         <init-param>
             <param-name>static-resources-list</param-name>
-            <param-value>/(\w)+.html</param-value>
+            <param-value>
+                /(\w)+.html
+                /css/(.)+.css
+                /js/(.)+.js
+                /img/(.)+.png
+            </param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>CXFServlet</servlet-name>
-        <url-pattern>/restbucks/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </servlet-mapping>
     
     <!--  MOSKITO UI-->
